Replace movie details for Spider-Man with The Dark Knight Rises

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -502,9 +502,9 @@
                 <div class="movie-card" style="background-image: url('assets/images/nowayhome.jpg')">
                     <div class="movie-overlay">
                         <div class="movie-content">
-                            <h3>Spider-Man: No Way Home</h3>
-                            <p class="movie-info">2004 • Action/Heroes</p>
-                            <p class="movie-description">Setelah identitasnya sebagai Spider-Man terbongkar, Peter Parker kehilangan kendali atas hidupnya. Demi mengembalikan keadaan, ia meminta bantuan Doctor Strange.</p>
+                            <h3>The Dark Knight Rises</h3>
+                            <p class="movie-info">2012 • Action/Heroes</p>
+                            <p class="movie-description">Delapan tahun setelah kejadian-kejadian dalam "The Dark Knight", kota Gothan terlihat damai, meskipun Bruce Wayne masih dalam persembunyian seusai pertarungan yang melelahkan dengan Joker dan Harvey Dent.</p>
                             <div class="movie-rating">
                                 <span class="rating-number">8.4</span>
                                 <div class="rating-stars">
