Change movie card background image

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -499,7 +499,7 @@
 
 
                 <!-- Movie Card 6 -->
-                <div class="movie-card" style="background-image: url('assets/images/nowayhome.jpg')">
+                <div class="movie-card" style="background-image: url('assets/images/rises.jpg')">
                     <div class="movie-overlay">
                         <div class="movie-content">
                             <h3>The Dark Knight Rises</h3>
