Update portfolio title and tech item names

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -28,7 +28,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Portfolio</h1>
+                <h1>Tycami Portfolio</h1>
             </div>
             <button class="mobile-menu-btn">
                 <span></span>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="tech-item">
                     <img src="assets/images/tech/karnelsu.png" alt="KarnelSU">
-                    <span>KarnelSU</span>
+                    <span>KernelSU</span>
                 </div>
                 <div class="tech-item">
                     <img src="assets/images/tech/magisk.png" alt="Magisk">
