--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -28,7 +28,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Tycami Portfolio</h1>
+                <h1>Portfolio Tycami</h1>
             </div>
             <button class="mobile-menu-btn">
                 <span></span>
