Update project title for Mikrotik Olympiad

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -93,7 +93,7 @@
                 <div class="project-card">
                     <div class="card-content">
                         <img src="assets/images/ojm.jpg" alt="Second Certificate">
-                        <h3>Olimpiade Jaringan Mikrotik Nasional</h3>
+                        <h3>Olimpiade Jaringan Mikrotik</h3>
                         <p>Olimpiade Jaringan Mikrotik (OJM) adalah lomba tingkat nasional antar siswa SMK TKJ/TJKT/SIJA, yang menguji pengetahuan dan kemampuan dalam dunia jaringan.</p>
                         <div class="certificate-details">
                             <span class="cert-date">August 2025</span>
