Update profile image in about section

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -49,7 +49,7 @@
         <section id="about">
             <h1>About Me</h1>
             <div class="about-content">
-                <img src="assets/images/profil.jpg" alt="Ryandiq Fawwas Nafeeza" class="profile-image">
+                <img src="assets/images/profil1.jpg" alt="Ryandiq Fawwas Nafeeza" class="profile-image">
                 <div class="about-text">
                     <p>Halo! Selamat Datang di Portofolio Tycami. Perkenalkan nama saya Ryandiq Fawwas Nafeeza, seorang siswa aktif di Kelas XII TKJ Axioo, SMK PGRI 1 Ngawi. Jurusan Teknik Komputer dan Jaringan (TKJ) telah membekali saya dengan pemahaman mendalam dan keterampilan praktis..</p>
                     <p>Perjalanan saya di dunia teknologi dimulai sejak saya mengenal berbagai perangkat keras, perangkat lunak, dan bagaimana semuanya saling terhubung untuk menciptakan sistem yang kompleks dan fungsional. Saya selalu tertarik pada cara kerja internet, jaringan, dan bagaimana teknologi dapat memecahkan masalah di dunia nyata.</p>
