Update portfolio content and certificate details

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -54,7 +54,7 @@
             <div class="about-content">
                 <img src="assets/images/profil1.jpg" alt="Ryandiq Fawwas Nafeeza" class="profile-image">
                 <div class="about-text">
-                    <p>Halo! Selamat Datang di Portofolio Tycami. Perkenalkan nama saya Ryandiq Fawwas Nafeeza, seorang siswa aktif di Kelas XII TKJ Axioo, SMK PGRI 1 Ngawi. Jurusan Teknik Komputer dan Jaringan (TKJ) telah membekali saya dengan pemahaman mendalam dan keterampilan praktis..</p>
+                    <p>Halo! Selamat Datang di Portofolio Tycami. Perkenalkan nama saya Ryandiq Fawwas Nafeeza, seorang siswa aktif di Kelas XII TKJ Axioo, SMK PGRI 1 Ngawi. Jurusan Teknik Komputer dan Jaringan (TKJ) telah membekali saya dengan pemahaman mendalam dan keterampilan praktis.</p>
                     <p>Perjalanan saya di dunia teknologi dimulai sejak saya mengenal berbagai perangkat keras, perangkat lunak, dan bagaimana semuanya saling terhubung untuk menciptakan sistem yang kompleks dan fungsional. Saya selalu tertarik pada cara kerja internet, jaringan, dan bagaimana teknologi dapat memecahkan masalah di dunia nyata.</p>
                     <p>Saya juga sangat antusias dalam dunia teknologi, khususnya di bidang Jaringan dan Perbaikan Perangkat Keras/Lunak. Pengalaman saya di Kelas Industri Axioo memberikan hands-on experience yang berharga, terutama dalam penguasaan pada Jaringan Mikrotik dan troubleshooting PC, Laptop, serta smartphone.</p>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="project-card">
                     <div class="card-content">
                         <img src="assets/images/second-cert.jpg" alt="Second Certificate">
-                        <h3>MikroTik Certified Network Associate</h3>
+                        <h3>MikroTik Certified Network Associate (International Certification)</h3>
                         <p>MTCNA certification validates foundational knowledge of MikroTik networks and RouterOS. Issued by Citraweb Solusi Teknologi - Mikrotik Certified Training Partner.</p>
                         <div class="certificate-details">
                             <span class="cert-date">July 2025</span>
