Replace song details for LOVE DIVE

--- a/Portofolio-Final/index.html
+++ b/Portofolio-Final/index.html
@@ -349,11 +349,11 @@
                 </div>
 
                 <div class="song-card">
-                    <div class="song-cover" style="background-image: url('assets/images/blindinglights.jpg')"></div>
+                    <div class="song-cover" style="background-image: url('assets/images/lovedive.jpg')"></div>
                     <div class="song-details">
-                        <h4>Blinding Lights</h4>
-                        <p class="artist-name">The Weeknd</p>
-                        <p class="album-name">After Hours</p>
+                        <h4>LOVE DIVE</h4>
+                        <p class="artist-name">IVE</p>
+                        <p class="album-name">I've Ive</p>
                     </div>
                 </div>
 
