--- a/Portofolio-Final/project.html
+++ b/Portofolio-Final/project.html
@@ -94,13 +94,13 @@
             <!-- Card 3 -->
             <div class="project-card" id="card-3">
                 <div class="card-header">
-                    <h3>Comming Soon</h3>
+                    <h3>Coming Soon</h3>
                     <span class="card-date">- - -</span>
                 </div>
                 <div class="card-body"
                     style="background-image: url('assets/images/masukan-gambar-disini-3.jpg'); background-size: cover; background-position: center;">
                     <div class="card-content">
-                        <h2>Comming Soon</h2>
+                        <h2>Coming Soon</h2>
                         <a href="" target="_blank" class="view-project-btn">View
                             Project</a>
                     </div>
@@ -159,5 +159,6 @@
         });
     </script>
 </body>
+
 
 </html>
